--- a/Dreamworld.html
+++ b/Dreamworld.html
@@ -83,7 +83,7 @@
 </center>
 <center>
  <footer>
-      <h3> &copy; 2025 - all rights reserved</h3>
+      <h3> &copy; 2025 - REPUBLIC OF LUNARA</h3>
     </footer>
 </center>
 </html>
