intro page moodify

--- a/project/Dreamworld.html
+++ b/project/Dreamworld.html
@@ -12,7 +12,7 @@
     <section id="navbar"></section>
     <div class="navbar">
         <div class="logo">
-            <img src="../My_dream_world/Assests/logo.png" alt="my logo" height="80px" width="100px">
+            <img src="../Assests/logo.png" alt="my logo" height="80px" width="100px">
         </div>
 
         <div class="searchbox">
@@ -40,7 +40,7 @@
     </center>
 
     <div class="banner">
-        <img src="../My_dream_world/Assests/mainbanner.png" alt="FLAG OF OUR COUNTRY">
+        <img src="../Assests/mainbanner.png" alt="FLAG OF OUR COUNTRY">
     </div>
 
 <!-- home page -->
@@ -87,7 +87,7 @@
             <center>
                 <H1>WELCOME TO LUNARA PASSPORT SERVICES</H1>
                 <br><br>
-                <img src="../My_dream_world/Assests/passport.png" alt="our passport" height="500px" width="500px"> <br>
+                <img src="../Assests/passport.png" alt="our passport" height="500px" width="500px"> <br>
                 <b>Our Country Official Passport</b>
             </center>
             <br><br>
@@ -181,7 +181,7 @@
             <div class="form">
                 <h1> &harrw;FILL THE DETAILS TO APPLY FOR LURANA E-VISA &harrw;</h1>
                 <br><br><br>
-                <form action="../My_dream_world/visaresponse.html" method="get">
+                <form action="" method="get">
                     <label> Enter Name :</label>
                     <input type="text" placeholder="Initial Must">
                     <br><br>
@@ -349,7 +349,7 @@
         <div class="bank">
             <Center>
                 <h1>ORU CENTRAL BANK</h1>
-                <img src="../My_dream_world/Assests/bank.png" alt="our bank image">
+                <img src="../Assests/bank.png" alt="our bank image">
             </Center>
             <p>The Central Bank of the Republic of Lurana is the principal monetary authority responsible for
                 maintaining
@@ -393,7 +393,7 @@
         <div class="currency">
             <Center>
                 <h1>ORU OFFICIAL CURRENCY</h1>
-                <img src="../My_dream_world/Assests/currency.png" alt="our currency image">
+                <img src="../Assests/currency.png" alt="our currency image">
             </Center>
             <br>
             <p>The official currency of the Republic of Lurana is known as the Luran. Distinguished by its futuristic
@@ -482,7 +482,7 @@
     <footer>
         <h3> &copy; 2025 The Republic of Lunara | Land of Peace, Progress, and Purity</h3>
          <div>
-            <a href="#navbar"><img src="../My_dream_world/Assests/5.png" alt="Top Arrow" width="40" height="40"></a>
+            <a href="#navbar"><img src="../Assests/5.png" alt="Top Arrow" width="40" height="40"></a>
         </div>
     </footer>
 </center>
