intro page update

--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@
    </div>
    <div class="html">
     <center><h2>Front end projects</h2></center>
-    <a href="project/Dreamworld.html">OWN WORLD PROJECT</a>
+    <a href="project/dreamworld.html">OWN WORLD PROJECT</a>
