--- a/project/Dreamworld.html
+++ b/project/Dreamworld.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WELCOME TO LUNARA</title>
-    <link rel="stylesheet" href="Dreamworld.css">
+    <link rel="stylesheet" href="dreamworld.css">
 </head>
 
 <body>
